[project]
name = "python-fastapi-services"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.1",
    "google-genai>=1.67.0",
    "httpx>=0.28.1",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "setuptools>=79.0.2",
    "uvicorn>=0.41.0",
    "wheel>=0.46.2",
]
